public/css/css.css
/* This file is part of iDecryptIt Web.
 * Copyright (c) 2019 Cole Johnson
 * 
 * This program is free software: you can redistribute it and/or modify it under
 *   the terms of the GNU Affero General Public License as published by the Free
 *   Software Foundation, either version 3 of the License, or (at your option)
 *   any later version.
 * 
 * This program is distributed in the hope that it will be useful, but WITHOUT
 *   ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 *   FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License
 *   for more details.
 * 
 * You should have received a copy of the GNU Affero General Public License along
 *   with this program. If not, see <https://www.gnu.org/licenses/>.
 */
nav {
    margin-bottom: 20px;
}

footer {
    margin-top: 20px;
}

#tocTitle {
    font-size: x-large;
}

#toc ul {
    list-style: none;
    padding-left: 1rem;
}

.external {
    background: url(/img/external-ltr.png) center right no-repeat;
    padding-right: 15px;
}

/* Bootstrap's default pink like color reminds me of a Mediawiki link to a
 * non-existent page */
code {
    color: #212529;
}

h2 {
    border-width: 0 0 1px 0;
    border-style: solid;
}

.fwDevice img {
    width: 96px;
}

.fwInfobox caption {
    caption-side: top;
}

.hexView {
    border: 1px;
    border-style: solid;
    padding: 1rem;
    width: fit-content;
}

.bg-red {
    background-color: #f44336;
    color: white;
}
.bg-orange {
    background-color: #ff9800;
    color: black;
}
.bg-yellow {
    background-color: #ffeb3b;
}
.bg-green {
    background-color: #4caf50;
    color: black;
}
.bg-blue {
    background-color: #03a9f4;
    color: black;
}
.bg-indigo {
    background-color: #3f51b5;
    color: white;
}
.bg-purple {
    background-color: #9c27b0;
    color: white;
}

form {
    border: 1px;
    border-style: solid;
    padding: 1rem;
}

